--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-Hello worldy
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Ottimo Bikes - The Ottimo Titanium Four Season Bicycle - built without compromise.</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Outstanding Titanium Bikes, inspired by and built in Cumbria.">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="./css/ottimo.css" rel="stylesheet" media="screen">
+    <link rel="icon" href="img/favicon.png">
+  <style>
+  </style>
+  </head>
+  <body id = "front-page-body">
+    <div class = "container front-page-div">
+
+      <div class = "row">
+      <div class = "front-page col-md-5">
+        <h1 id = "front-page-title" class = "web-font">Ottimo Bikes</h1>
+        <p>
+          We are a young company based in the Great Border City of Carlisle. On our doorstep is the Scottish border country, the famous English Lake District, Galloway and the Eden Valley. We build bikes that reflect the joy of exploration and discovery, and are the very best that we can make.
+        </p>
+        <p>
+          Titanium is the material we use for our frames. Light, strong and durable, they are made to our specifications.
+          Components are sourced from specialist manufacturers from across the world making our bikes both unique and beautiful.
+        </p>
+        <p>
+          Titanium will never be inexpensive, but by supplying direct to you we hope to provide outstanding value with unrivalled quality.
+        </p>
+        <a href = "4sv.php"><div class="web-font ottimo-button" style="width: 100%;">Discover the Ottimo 4SV Titanium Bike &raquo;</div></a>
+      </div>
+    </div>
+    <script src="js/analytics.js"></script>
+  </body>
+</html>
