--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>
           Titanium will never be inexpensive, but by supplying direct to you we hope to provide outstanding value with unrivalled quality.
         </p>
-        <a href = "4sv.php"><div class="web-font ottimo-button" style="width: 100%;">Discover the Ottimo 4SV Titanium Bike &raquo;</div></a>
+        <a href = "4sv.html"><div class="web-font ottimo-button" style="width: 100%;">Discover the Ottimo 4SV Titanium Bike &raquo;</div></a>
       </div>
     </div>
     <script src="js/analytics.js"></script>
